solved layout issues

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,10 +1,7 @@
 .Footer {
   position: absolute;
-  height: 80px;
   bottom: 0;
-  left: 0;
-  right: 0;
-  top: auto;
+  height: 80px;
   width: 100%;
   margin: 0;
   background-color: #2F3B42;
