--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -4,6 +4,7 @@ $headerHeight: 74px;
   background-color: #FFFFFF;
   border-color: #e7e7e7;
   height:  $headerHeight;
+  margin: 0;
 
   .HeaderContainer, .NavBarHeader, .NavBar {
     height: 100%;
